--- a/placeholder/index.html
+++ b/placeholder/index.html
@@ -5,11 +5,7 @@
     <title>Abakus fadderuke toppliste</title>
     <meta name="description" content="Placeholder fadderuke-leaderboard" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./abakule.png"
-    />
+    <link rel="icon" type="image/png" href="./abakule.png" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
@@ -31,10 +27,6 @@
       href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css"
     />
     <!--<![endif]-->
-    <link
-      rel="stylesheet"
-      href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
-    />
     <script
       src="https://code.jquery.com/jquery-2.2.4.min.js"
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
