--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Fadderuke toppliste app" />
+    <link rel="icon" href="%PUBLIC_URL%/abakule.png" />
     <title>Abakus fadderuke</title>
   </head>
   <body>
