Add some styling assets to manifest

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Fadderuke toppliste app" />
-    <link rel="icon" href="%PUBLIC_URL%/abakule.png" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="theme-color" content="#2f2c47">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/abakule.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/apple-touch-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Abakus fadderuke</title>
   </head>
   <body>
